Resolvendo alguns problemas no header: margin de 280px que está em todas as tags img (adicionadas por outro time) colocando os ícones no centro com o align-items: center;

--- a/base/css/estilo.css
+++ b/base/css/estilo.css
@@ -41,6 +41,7 @@ nav ul {
     padding: 0;
     margin: 0;
     display: flex;
+    align-items: center;
 }
 nav ul li {
     margin-left: 50px;
@@ -48,8 +49,9 @@ nav ul li {
 nav ul li:first-child{
     margin-left: 0; 
 }
-nav ul li a img {
+nav > ul > li > a > img {
     width: 80px;
+    margin: 0;
     height: auto;
 }
 header h1 {
